// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LightningColor overview 1`] = `
<DocumentFragment>
  <table
    class="css-1ea51ic-TableRowContainer"
  >
    <tbody>
      <tr
        class="css-1hc6nh0-BaseLightningColor"
      >
        <td>
          <div
            class="css-6m4gns-BaseLightningColor"
          >
            <div
              class="css-1qf014h-BaseLightningColor"
            >
              $brand-accessible
            </div>
            <p
              class="css-d3y9fs-BaseLightningColor"
            >
               Dark variant of BRAND that is accessible with white
            </p>
          </div>
        </td>
        <td>
          <div
            class="css-1od7n6o-BaseLightningColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-fzkjs4-BaseLightningColor"
              />
            </div>
            <div
              class="css-17cjsbo-BaseLightningColor"
            >
              rgb(0, 77, 128)
            </div>
            <div
              class="css-17cjsbo-BaseLightningColor"
            >
              #004d80
            </div>
            <div>
              BRAND_ACCESSIBLE
            </div>
          </div>
        </td>
        <td>
          <div
            style="text-align: right;"
          >
            2.6.0
          </div>
        </td>
        <td>
          <div
            style="text-align: center;"
          >
            Yes
          </div>
        </td>
        <td>
          <div
            style="display: flex; flex-direction: column; align-items: center;"
          >
            <div
              style="text-align: center; width: 1.5rem; height: 1.5rem; line-height: 1.5rem; font-size: .625rem; color: rgb(255, 255, 255); background-color: rgb(84, 196, 115);"
            >
              GA
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`LightningColor palette 1`] = `
<DocumentFragment>
  <table
    class="css-1x6c0w4-LightningColorPalette"
  >
    <colgroup>
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
    </colgroup>
    <thead>
      <tr>
        <th
          class="css-dre8ac"
        >
          Token
        </th>
        <th
          class="css-hv87u9"
        >
          Example
        </th>
        <th
          class="css-hv87u9"
        >
          Released
        </th>
        <th
          class="css-hv87u9"
        >
          Themeable
        </th>
        <th
          class="css-hv87u9"
        >
          Support
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="css-1hc6nh0-BaseLightningColor"
      >
        <td>
          <div
            class="css-6m4gns-BaseLightningColor"
          >
            <div
              class="css-1qf014h-BaseLightningColor"
            >
              $brand-disabled
            </div>
            <p
              class="css-d3y9fs-BaseLightningColor"
            >
               Disabled state of BRAND_A11Y
            </p>
          </div>
        </td>
        <td>
          <div
            class="css-1od7n6o-BaseLightningColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-yk894m-BaseLightningColor"
              />
            </div>
            <div
              class="css-17cjsbo-BaseLightningColor"
            >
              rgb(201, 199, 197)
            </div>
            <div
              class="css-17cjsbo-BaseLightningColor"
            >
              #c9c7c5
            </div>
            <div>
              BRAND_DISABLED
            </div>
          </div>
        </td>
        <td>
          <div
            style="text-align: right;"
          >
            2.6.0
          </div>
        </td>
        <td>
          <div
            style="text-align: center;"
          >
            Yes
          </div>
        </td>
        <td>
          <div
            style="display: flex; flex-direction: column; align-items: center;"
          >
            <div
              style="text-align: center; width: 1.5rem; height: 1.5rem; line-height: 1.5rem; font-size: .625rem; color: rgb(255, 255, 255); background-color: rgb(84, 196, 115);"
            >
              GA
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-1hc6nh0-BaseLightningColor"
      >
        <td>
          <div
            class="css-6m4gns-BaseLightningColor"
          >
            <div
              class="css-1qf014h-BaseLightningColor"
            >
              $brand-header
            </div>
            <p
              class="css-d3y9fs-BaseLightningColor"
            >
               Background color a branded app header
            </p>
          </div>
        </td>
        <td>
          <div
            class="css-1od7n6o-BaseLightningColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-ax231y-BaseLightningColor"
              />
            </div>
            <div
              class="css-17cjsbo-BaseLightningColor"
            >
              rgb(255, 255, 255)
            </div>
            <div
              class="css-17cjsbo-BaseLightningColor"
            >
              #ffffff
            </div>
            <div>
              PALETTE_GRAY_1
            </div>
          </div>
        </td>
        <td>
          <div
            style="text-align: right;"
          >
            2.6.0
          </div>
        </td>
        <td>
          <div
            style="text-align: center;"
          >
            Yes
          </div>
        </td>
        <td>
          <div
            style="display: flex; flex-direction: column; align-items: center;"
          >
            <div
              style="text-align: center; width: 1.5rem; height: 1.5rem; line-height: 1.5rem; font-size: .625rem; color: rgb(255, 255, 255); background-color: rgb(100, 136, 227);"
            >
              I
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-1hc6nh0-BaseLightningColor"
      >
        <td>
          <div
            class="css-6m4gns-BaseLightningColor"
          >
            <div
              class="css-1qf014h-BaseLightningColor"
            >
              $brand-header-contrast
            </div>
            <p
              class="css-d3y9fs-BaseLightningColor"
            >
               Variant of BRAND_HEADER that is accessible with BRAND_HEADER
            </p>
          </div>
        </td>
        <td>
          <div
            class="css-1od7n6o-BaseLightningColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-gr2f5z-BaseLightningColor"
              />
            </div>
            <div
              class="css-17cjsbo-BaseLightningColor"
            >
              rgb(94, 94, 94)
            </div>
            <div
              class="css-17cjsbo-BaseLightningColor"
            >
              #5e5e5e
            </div>
            <div>
              BRAND_HEADER_CONTRAST
            </div>
          </div>
        </td>
        <td>
          <div
            style="text-align: right;"
          >
            2.6.0
          </div>
        </td>
        <td>
          <div
            style="text-align: center;"
          >
            Yes
          </div>
        </td>
        <td>
          <div
            style="display: flex; flex-direction: column; align-items: center;"
          >
            <div
              style="text-align: center; width: 1.5rem; height: 1.5rem; line-height: 1.5rem; font-size: .625rem; color: rgb(255, 255, 255); background-color: rgb(100, 136, 227);"
            >
              I
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-1hc6nh0-BaseLightningColor"
      >
        <td>
          <div
            class="css-6m4gns-BaseLightningColor"
          >
            <div
              class="css-1qf014h-BaseLightningColor"
            >
              $brand-header-contrast-warm
            </div>
            <p
              class="css-d3y9fs-BaseLightningColor"
            >
               Variant of BRAND_HEADER_CONTRAST that provides a warm color
            </p>
          </div>
        </td>
        <td>
          <div
            class="css-1od7n6o-BaseLightningColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-1500z3b-BaseLightningColor"
              />
            </div>
            <div
              class="css-17cjsbo-BaseLightningColor"
            >
              rgb(191, 2, 1)
            </div>
            <div
              class="css-17cjsbo-BaseLightningColor"
            >
              #bf0201
            </div>
            <div>
              BRAND_HEADER_CONTRAST_WARM
            </div>
          </div>
        </td>
        <td>
          <div
            style="text-align: right;"
          >
            2.6.0
          </div>
        </td>
        <td>
          <div
            style="text-align: center;"
          >
            Yes
          </div>
        </td>
        <td>
          <div
            style="display: flex; flex-direction: column; align-items: center;"
          >
            <div
              style="text-align: center; width: 1.5rem; height: 1.5rem; line-height: 1.5rem; font-size: .625rem; color: rgb(255, 255, 255); background-color: rgb(100, 136, 227);"
            >
              I
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="css-1hc6nh0-BaseLightningColor"
      >
        <td>
          <div
            class="css-6m4gns-BaseLightningColor"
          >
            <div
              class="css-1qf014h-BaseLightningColor"
            >
              $brand-primary
            </div>
            <p
              class="css-d3y9fs-BaseLightningColor"
            >
               Primary brand color
            </p>
          </div>
        </td>
        <td>
          <div
            class="css-1od7n6o-BaseLightningColor"
          >
            <div
              class="css-6bf4yd-CopyContainer"
              style="display: inline-block;"
            >
              <div
                class="css-1y0nrn7-BaseLightningColor"
              />
            </div>
            <div
              class="css-17cjsbo-BaseLightningColor"
            >
              rgb(21, 137, 238)
            </div>
            <div
              class="css-17cjsbo-BaseLightningColor"
            >
              #1589ee
            </div>
            <div>
              BRAND_PRIMARY
            </div>
          </div>
        </td>
        <td>
          <div
            style="text-align: right;"
          >
            2.6.0
          </div>
        </td>
        <td>
          <div
            style="text-align: center;"
          >
            Yes
          </div>
        </td>
        <td>
          <div
            style="display: flex; flex-direction: column; align-items: center;"
          >
            <div
              style="text-align: center; width: 1.5rem; height: 1.5rem; line-height: 1.5rem; font-size: .625rem; color: rgb(255, 255, 255); background-color: rgb(84, 196, 115);"
            >
              GA
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
